--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -19,12 +19,15 @@
           <li id="openExt" title="Add extend window"><span class="glyphicon glyphicon-plus-sign" title="add window"></span> Extend Window</li>
         </ul>
       </div>
+      <!--
       <div class="note">
         Welcome! Click me to begin!
       </div>
+    -->
     </li>
     <li style="display:none"  title="hide panel header"><span id="fixedToggle" class="glyphicon glyphicon-pushpin"></li>
   </ul>
+
   <ul id="myNavLeft2">
     <!--
     <span class="split"></span>
@@ -54,6 +57,8 @@
       </ul>
     </div>
 </li>
+</ul>
+<ul id="extWinNav">
 </ul>
 <ul id="myNavRight" style="float:right">
   <li id="logo">
