--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -6,7 +6,7 @@
       <span class='glyphicon glyphicon-cog'></span>
     </li>
   -->
-    <li id="home"  title="home"><span class="glyphicon glyphicon-home"></span>Home</li>
+    <li id="home"  title="home" class="mainWinOnly"><span class="glyphicon glyphicon-home"></span>Home</li>
     <!--
     <span class="split"></span>
   -->
@@ -32,7 +32,7 @@
     <!--
     <span class="split"></span>
   -->
-      <li id="sessions"  title="Manage Sessions">
+      <li id="sessions"  title="Manage Sessions" class="mainWinOnly">
         <span class="glyphicon glyphicon-hdd" id="sessionUi"></span>Session
         <div class="frame">
           <ul>
@@ -49,8 +49,8 @@
           </u1>
         </div>
       </li>
-    <li style="padding-right:0px" title="Login with google" id="menuUser"><span id="login" class="glyphicon glyphicon-log-in" ></li>
-    <li style="padding-right:0px"><image id="picture" style="height:18px;width:18px;margin:7px 4px"></image>
+    <li style="padding-right:0px" title="Login with google" id="menuUser" class="mainWinOnly"><span id="login" class="glyphicon glyphicon-log-in" ></li>
+    <li style="padding-right:0px" class="mainWinOnly"><image id="picture" style="height:18px;width:18px;margin:7px 4px"></image>
     <div class="frame">
       <ul>
       <li id="logout" title="Logout"><span class="glyphicon glyphicon-log-out" title="logout"></span> Log Out</li>
