add set null for google sheet id

--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -40,12 +40,12 @@
             <li id="setSheetId" title="Set a google sheet id to host sessions"><span class="glyphicon glyphicon-cog"></span> Set Session Sheet Id</li>
           </ul>
           <ul id="sheetUi" style="display:none">
-            <li id="loadFromSheet" title="Load session from google sheet"><span class="glyphicon glyphicon-open"></span> Load Session from GSheet</li>
-            <li id="saveToSheet" title="Save session to google sheet"><span class="glyphicon glyphicon-save"></span> Save Session to GSheet</li>
+            <li id="loadFromSheet" title="Load session from google sheet"><span class="glyphicon glyphicon-open"></span> Load Session</li>
+            <li id="saveToSheet" title="Save session to google sheet"><span class="glyphicon glyphicon-save"></span> Save Session</li>
           </ul>
           <ul id="fileUi">
-            <li id="import" title="Load session from local disk"><span class="glyphicon glyphicon-import"></span> Load Session from Drive</li>
-            <li id="export" title="Save session to local disk"><span class="glyphicon glyphicon-export"></span> Save Session to Drive</li>
+            <li id="import" title="Load session from local disk"><span class="glyphicon glyphicon-import"></span> Load Session</li>
+            <li id="export" title="Save session to local disk"><span class="glyphicon glyphicon-export"></span> Save Session</li>
           </u1>
         </div>
       </li>
