add install extension menu

--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -61,6 +61,9 @@
 <ul id="extWinNav">
 </ul>
 <ul id="myNavRight" style="float:right">
+  <li id="extension" style="display: none">
+    <a href="https://chrome.google.com/webstore/detail/nbrowser-plugin/djcdicpaejhpgncicoglfckiappkoeof" target="_blank"><img src="/static/image/extension_install.png"  style="height:18px;width:18px;margin:7px 4px" title="install chrome extension"></img></a>
+  </li>
   <li id="logo">
       <image src="/static/image/icon.png" style="height:18px;width:18px;margin:7px 4px"></image><span id="appinfo" style="color:#777"></span>
   </li>
