add create google sheet

--- a/app/templates/menu.tmpl
+++ b/app/templates/menu.tmpl
@@ -34,9 +34,10 @@
   -->
       <li id="sessions"  title="Manage Sessions" class="mainWinOnly">
         <span class="glyphicon glyphicon-hdd" id="sessionUi"></span>Session
-        <div class="frame">
+        <div class="frame" id="sessionFrame">
           <ul>
             <li id="share" title="Share session by generated URL"><span class="glyphicon glyphicon-share-alt" title="share session"></span> Share Session </li>
+            <li id="createSheetId" title="Create a google sheet id to host sessions"><span class="glyphicon glyphicon-file"></span> Create a New Session Sheet</li>
             <li id="setSheetId" title="Set a google sheet id to host sessions"><span class="glyphicon glyphicon-cog"></span> Set Session Sheet Id</li>
           </ul>
           <ul id="sheetUi" style="display:none">
