--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -47,6 +47,10 @@
     .selected {
       background-color: #CFCFCF;
     }
+    h4 {
+      font-size: 16px;
+      color: #336289;
+    }
   </style>
 </head>
 
