improve gsheet panel icon

--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -66,7 +66,7 @@
           <form>
             <div class="form-group">
               <label for="sheetIdInput">Google SheetID to Host Sessions</label>
-              <input type="text" class="form-control" id="sheetIdInput" placeholder="name@example.com">
+              <input type="text" class="form-control" id="sheetIdInput" placeholder="">
             </div>
             <button id="edit" class="btn btn-success">Edit</button>
             <button id="load" class="btn btn-primary">Load</button>
