--- a/app/tmpl/home.tmpl
+++ b/app/tmpl/home.tmpl
@@ -51,6 +51,13 @@
       font-size: 16px;
       color: #336289;
     }
+    .active, li:active {
+        background-color: #336289;
+    }
+    li:mouseover {
+        background-color: lightyellow;
+    }
+
   </style>
 </head>
 
@@ -88,6 +95,19 @@
             r.push(regionNiceText(d))
         })
         return r.join(";")
+    }
+
+    var randomString = function(length){
+        var chars = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXTZabcdefghiklmnopqrstuvwxyz'.split('');
+        if (!length) {
+            length = Math.floor(Math.random() * chars.length);
+        }
+
+        var str = '';
+        for (var i = 0; i < length; i++) {
+            str += chars[Math.floor(Math.random() * chars.length)];
+        }
+        return str;
     }
 
     var stateId = "cnb000"
@@ -136,14 +156,59 @@
       })
 
     var iconRender = S.layoutIcon().xscale(2.70).yscale(1.68)
-    var _render = function(el) {
-      el.each(function(d) {
-        var svg = d3.select(this).append("svg").attr("width", 270).attr("height", 150)
-        //console.log(d)
-        var dmain = JSON.parse(JSON.parse(d[2])[-1])
-        svg.datum(dmain).call(iconRender)
-      })
-    }
+  
+        var trans = function(d) {
+          if (d=="-1") {return "main"}
+          return "ext"+d
+      }
+
+      var _render = function(el) {
+        el.each(function(d) {
+          var div = d3.select(this).append("div")
+          var iconRender = S.layoutIcon().xscale(2.70).yscale(1.68)
+          var dmain = JSON.parse(JSON.parse(d[2])[-1])
+          //TODO WITH OTHER EXTERNAL WINDOW
+          var allw = JSON.parse(d[2])
+          var keys = Object.keys(allw).sort(function(a,b){return parseInt(a) > parseInt(b)})
+          keys.shift()
+          var d = []
+          keys.forEach(function(k){
+            d.push(JSON.parse(allw[k]));
+          })
+         //TODO ADD TAB
+          if (d.length==1) {
+            var svg = d3.select(this).append("svg").attr("width",270).attr("height", 150)
+            svg.datum(dmain).call(iconRender)
+          } else {
+           var ul = div.append("ul").classed("nav",true).classed("nav-tabs",true)
+           var tabdiv = div.append("div")
+           tabdiv.selectAll(".tabdiv").data(d)
+             .enter()
+             .append("div")
+             .classed("tabdiv",true)
+             .style("display","none")
+             .append("svg")
+             .attr("width",270)
+             .attr("height",150)
+             .call(iconRender)
+
+           var lis = ul.selectAll("li").data(keys)
+           .enter()
+           .append("li")
+           .on("click",function(d,i){
+                tabdiv.selectAll(".tabdiv").style("display","none")
+                ul.selectAll("li").classed("active",false)
+                tabdiv.select(".tabdiv:nth-child("+(i+1)+")").style("display",null) 
+                ul.select("li:nth-child("+(i+1)+")").classed("active",true)
+           })
+           .text(function(k){return trans(k)})
+            ul.select("li:nth-child(1)").classed("active",true)
+            tabdiv.select(".tabdiv:nth-child(1)").style("display",null) 
+          } 
+        })
+      }
+      
+
     var pchart = function(selection) {
       selection.each(function(d, i) {
         var el = d3.select(this)
