--- a/app/tmpl/pub.tmpl
+++ b/app/tmpl/pub.tmpl
@@ -40,13 +40,33 @@
       font-size: 16px;
       color: #336289;
     }
-    .active, li:active {
+    .nav li {
+        background-color: #F0F0F0;
+        margin: 0 3px 0 0;
+        padding: 2px 2px 0 0;
+        color: #000;
+        -webkit-border-top-left-radius: 5px;
+        -webkit-border-top-right-radius: 5px;
+        -moz-border-radius-topleft: 5px;
+        -moz-border-radius-topright: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+
+    .nav .active {
         background-color: #336289;
         color: lightyellow;
     }
-    li:hover {
-        color: #111;
-        background-color: lightyellow;
+    .nav li:hover {
+        background-color: #DDD;
+        color: #333;
+    }
+    .nav {
+        cursor:default;
+
+    }
+    .panel {
+        cursor:default;
     }
 
   </style>
