--- a/app/tmpl/pub.tmpl
+++ b/app/tmpl/pub.tmpl
@@ -20,9 +20,13 @@
   {{template "css"}}
   <link rel="stylesheet" href="/web/style/sand.base.css">
   <style>
+    body {
+        font-family: Sans-Serif;
+        color: #303030;
+    }
     .panel {
       width: 300px;
-      height: 530px;
+      height: 570px;
       float: left;
       margin: 10px;
     }
